[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Test.theme" type="Theme" id=2]
[ext_resource path="res://scenes/ActionButton.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "slide_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1.03526, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.290196, 0.0235294, 0.0235294, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.450625, 6.96441 ),
"update": 0,
"values": [ 0, 35 ]
}

[sub_resource type="Animation" id=2]
resource_name = "slide_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.183011, 1 ),
"update": 0,
"values": [ 20, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="ActionButton" type="Button"]
anchor_left = 0.125
anchor_top = 0.033
anchor_right = 0.125
anchor_bottom = 0.033
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 2 )
action_mode = 0
text = "Placeholder Button of fortune"
flat = true
align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highlight" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 1 )
anims/slide_out = SubResource( 2 )
[connection signal="focus_entered" from="." to="." method="_on_ActionButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ActionButton_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_ActionButton_pressed"]
